--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,7 +56,7 @@
    */
 
   /** Font family */
-  --fontFamily-noto_sans: 'Noto Sans', sans-serif;
+  --fontFamily-noto_sans: 'IBM Plex Sans Arabic', sans-serif;
 
   /** Font size */
   --fontSize-1: 2.9rem;
@@ -225,9 +225,10 @@ body.nav-active { overflow: hidden; }
 }
 
 .headline-1 {
-  font-size: var(--fontSize-1);
+  font-size: var(--fontSize-2);
   color: var(--text-alice-blue);
   font-weight: var(--weight-extraBold);
+
 }
 
 .headline-2 { font-size: var(--fontSize-2); }
